// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button tests renders the component 1`] = `
<DocumentFragment>
  <button
    class="btn-default px-5 py-[4px] text-[14px]"
    data-cy="button-cy"
    type="button"
  >
    Button label
  </button>
</DocumentFragment>
`;

exports[`Button tests with disabled 1`] = `
<DocumentFragment>
  <button
    class="btn-default px-5 py-[4px] text-[14px]"
    disabled=""
    type="button"
  />
</DocumentFragment>
`;
